# AutoTraceAi

./: .env.example  .gitignore  ARCHITECTURE.md  Home.py  README.md  auth.py  database.py  pydantic_llm.py  pyproject.toml  sqns.txt  startup.md
pages/: Example.py
scratch/: migrate_db.py
