[tool.poetry]
name = "AutoTraceAi"
version = "0.1.6"
description = ""
authors = ["HunterAlpha7 <AlphaSeaWarrior@ protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
opencv-python = "^4.8.1.78"
llama-index = "^0.9.22"
python-dotenv = "^1.0.0"
setuptools = "^69.0.3"
weaviate-client = "^3.26.0"
google-generativeai = ">=0.3.0"
boto3 = "^1.34.14"
streamlit-modal = "^0.1.0"
Pillow = "^10.1.0"
requests = "^2.31.0"
pydantic = "^2.5.3"
typing_extensions = "^4.9.0"
openai = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
